<resources>
    <string name="app_name">Contakoo</string>
    <string name="choose_your_source_of_contact">Choose your source of contact!</string>
    <string name="MakeCall">Make a Call</string>
    <string name="SendMessage">Send Message</string>
    <string name="SendEmail">Send Email</string>
    <string name="website">Open Website</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="Call">Call</string>
    <string name="back">Back</string>
    <string name="enter_no_to_message">Enter No. to message</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="enter_email_subject">Enter Email subject</string>
    <string name="enter_url">Enter URL</string>
    <string name="open_url">Open URL</string>
</resources>