<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendEmailActivity">

  <EditText
      android:id="@+id/editTextEmailAddress"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="200dp"
      android:autofillHints=""
      android:drawableStart="@drawable/ic_baseline_email_24"
      android:ems="10"
      android:hint="@string/enter_email_address"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextEmailSubject"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:autofillHints=""
      android:drawableStart="@drawable/ic_baseline_subject_24"
      android:ems="10"
      android:hint="@string/enter_email_subject"
      android:inputType="textEmailSubject"
      android:minHeight="48dp"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

  <Button
      android:id="@+id/buttonEmail"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="70dp"
      android:text="@string/email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEmailSubject" />
  <Button
      android:id="@+id/buttonBackEmail"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="23dp"
      android:text="@string/back"
      app:icon="@drawable/ic_baseline_arrow_back_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>