<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenWebsiteActivity">

    <EditText
        android:id="@+id/editTextWebsiteURL"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_web_24"
        android:ems="10"
        android:hint="@string/enter_url"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonURL"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/open_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWebsiteURL" />

    <Button
        android:id="@+id/buttonBackWebsite"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/back"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonURL" />
</androidx.constraintlayout.widget.ConstraintLayout>